apps/deploy/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rollout-bluegreen
  name: rollout-bluegreen
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rollout-bluegreen
