apps/deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rollout-bluegreen
spec:
  rules:
  - host: rollout-bluegreen-rollouts-demo-dev.apps.home.ocplab.com
    http:
      paths:
      - backend:
          service:
            name: rollout-bluegreen-active
            port:
              number: 8080
        path: /
        pathType: Prefix
